cursive-bootstrap/tests/ui/E-MEM/E-MEM-3030.cursive
// RUN: compile-fail
// DIAG: E-MEM-3030
// SPEC: 5.2.16
// DESC: Unsafe operation outside unsafe block

public procedure main(move ctx: Context) -> i32 {
    let x: i32 = 42
    let y: u32 = transmute<i32, u32>(x)  //~ ERROR E-MEM-3030: unsafe outside block
    return 0
}
